fix(Blazor): fix spacing issues with menu and error components

--- a/Ozym.Web/Components/Common/ErrorMessageBox.razor.css
+++ b/Ozym.Web/Components/Common/ErrorMessageBox.razor.css
@@ -1,7 +1,7 @@
 ﻿.error-msg-box {
     background-color: var(--theme-hexcolor-secondary-1-1, "red") !important;
     border-radius: 1rem;
-    resize: vertical;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    margin-bottom: 0.5rem;
+    /*resize: vertical;*/
+    padding: 0.5rem 1rem 1rem 1rem;
+    margin: 0.5rem;
 }
